--- a/static/css/index.css
+++ b/static/css/index.css
@@ -21,6 +21,10 @@
   margin-top: 2rem;
 }
 
+.cards-container {
+  margin-top: 2rem;
+}
+
 .btn-lg {
   display: flex;
   width: 236.8px;
@@ -109,7 +113,8 @@
 }
 
 .card-img-top {
-  height: 100%;
+  width: 100%;
+  height: 150px;
 }
 
 .button-section {
@@ -143,44 +148,163 @@
 /* RESPONSIVE WEB DESIGN */
 
 /* DESKTOP SMALLER SCREEN */
-@media (max-width: 1366px) {
+@media (max-width: 1400px) {
   .btn-lg {
     width: 200px;
     height: 66px;
     font-size: 14px;
   }
-}
-
-@media (max-width: 1280px) {
-  .btn-lg {
-    width: 180px;
-    height: 46px;
-    font-size: 14px;
+  .card {
+    width: 12rem !important;
+    height: 12rem !important;
   }
+  .card-img-top {
+    width: 100%;
+    height: 120px;
+  }
+  /*.comment-section {
+    position: relative;
+    top: -10px;
+  }
+  .like-section {
+    position: relative;
+    top: -10px;
+  }*/
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1200px) {
   .btn-lg {
     width: 160px;
     height: 26px;
-    font-size: 12px;
+    font-size: 14px;
+  }
+  .card {
+    width: 10rem !important;
+    height: 10rem !important;
+  }
+  .card-img-top {
+    width: 100%;
+    height: 100px;
+  }
+  .comment-section {
+    position: relative;
+    top: -5px;
+    left: 10px;
+  }
+  .comment-section img {
+    width: 16px;
+    height: 16px;
+  }
+  .like-section {
+    position: relative;
+    top: -5px;
+    left: 10px;
+  }
+  .like-section img {
+    width: 16px;
+    height: 16px;
   }
 }
-@media (max-width: 992px) {
+
+@media (max-width: 991.8px) {
+  .btn-lg {
+    width: 120px;
+    height: 26px;
+    font-size: 12px;
+  }
+  .card {
+    width: 7rem !important;
+    height: 7rem !important;
+  }
+  .card-img-top {
+    width: 100%;
+    height: 80px;
+  }
+  .timer-text {
+    font-size: 10px;
+  }
+  .card-paragraph {
+    font-size: 10px !important;
+  }
+  .comment-section {
+    position: relative;
+    top: -10px;
+    right: 20px;
+  }
+  .comment-section img {
+    width: 12px;
+    height: 12px;
+  }
+  .like-section {
+    position: relative;
+    top: -10px;
+    right: 30px;
+  }
+  .like-section img {
+    width: 12px;
+    height: 12px;
+  }
+  .card-body {
+    padding: 0.2rem 0.2rem;
+  }
+}
+@media (max-width: 767.8px) {
   .btn-lg {
     width: 80px;
     height: 80px;
     font-size: 12px;
+  }
+  .buttons-container .col {
+    margin-right: -2rem;
+  }
+  .card {
+    width: 16rem !important;
+    height: 16rem !important;
+  }
+  .card-img-top {
+    width: 100%;
+    height: 150px;
+  }
+  .timer-text {
+    font-size: 14px;
+  }
+  .card-paragraph {
+    font-size: 14px !important;
+  }
+  .comment-section {
+    position: relative;
+    top: 0;
+    left: 0;
+  }
+  .comment-section img {
+    width: 22px;
+    height: 22px;
+  }
+  .like-section {
+    position: relative;
+    top: 0;
+    left: 0;
+  }
+  .like-section img {
+    width: 22px;
+    height: 22px;
+  }
+  .card-body {
+    padding: 1rem 1rem;
+  }
+  .cards-container .col-card {
+    margin: 0.5rem auto;
   }
 }
 
 @media (max-width: 480px) {
   .btn-lg {
     width: 20px;
-    height: 80px;
+    height: 60px;
     font-size: 12px;
   }
-  .col {
-    margin-right: -1rem;
+  .cards-container .col-card {
+    margin-top: 0.5rem;
+    margin-left: 2rem;
   }
 }
