--- a/templates/index.html
+++ b/templates/index.html
@@ -129,7 +129,7 @@
 </div>
 
 <!-- CARDS -->
-<div class="container buttons-container">
+<div class="container cards-container">
   <h2>Recommended recipes</h2>
   <div class="row">
     <div class="col col-card">
